--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <div class="col-sm d-flex justify-content-center align-items-center p-5">
 <div class="main-1 d-flex justify-content-center align-items-center flex-column">
         <div class="first" style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden;">
-          <img src="assets/images/skardu.webp" alt="">
+          <img src="assets/images/sorry.webp" alt="">
         </div>
 
         <div class="second">
 
-          <div class="sec-child1 mt-4" style="width: 250px; height: 60px; text-align: center;"><h1 class="fw-normal" style="color: white; text-align: center;">10&deg;C</h1></div>
+          <div class="sec-child1 mt-4" style="width: 250px; height: 60px; text-align: center;"><h1 class="fw-normal" style="color: white; text-align: center;">0&deg;C</h1></div>
           <div class="sec-child2" style="width: 250px; height: 60px; text-align: center;">
-            <h2 class="text-white ">Skardu</h2>
+            <h2 class="text-white ">Not Available</h2>
           </div>
           <div class="sec-child3" style="width: 250px; height: 60px;text-align: center;">
             <p class="text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
